Remove domestic and overseas conference distinction
